updated path for background picture

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ header {
 /* Education
 ------------------------------------*/
 .Education{
-  background-image: url(joanna-kosinska-unsplash.jpg);
+  background-image: url(https://raw.githubusercontent.com/Namitha045/my_web/master/joanna-kosinska-unsplash.jpg);
   background-size: cover;
   background-position: top right;
   padding: 20px;
